fixed typo in README
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1439490 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-j/proton/README
+++ b/proton-j/proton/README
@@ -31,7 +31,7 @@ To use the java implementation via jython, follow these instructions
 from the directory containing this file:
 
   mvn compile
-  export JYTHON_PATH=$PWD/target/classes
+  export JYTHONPATH=$PWD/target/classes
 
 Once this is done you can run the python test suite via jython to
 validate the java implementation:
