PROTON-194: CMake now builds proton-j-impl. Re-root jni thunking source code from bindings/java/jni/src to bindings/java/src. Various refactorings with the CMakeLists.txt including the extract function rebuild_jar which is shared between proton-jni and proton-j-impl.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1439855 13f79535-47bb-0310-9956-ffa450edef68

--- a/cmake/Modules/README
+++ b/cmake/Modules/README
@@ -1,4 +1,15 @@
-This is Andreas Schneider's CMake Java Support.  We have our own local copy merely
+CMake Modules
+=============
+
+Contents:
+
+UseJava, UseJavaSymLinks, UseJavaClassFilelist:
+
+These are Andreas Schneider's CMake Java Support.  We have our own local copy merely
 to allow us to build the Java bindings with older versions of cmake (<2.8.6). Local modifications
 are commented with "Apache Qpid Proton...".
 If cmake 2.8.6 is in use, these files will not be used.
+
+UseProtonJava:
+
+Custom support functions for the Proton Java modules
