--- a/cmake/Modules/README
+++ b/cmake/Modules/README
@@ -5,10 +5,9 @@ Contents:
 
 UseJava, UseJavaSymLinks, UseJavaClassFilelist:
 
-These are Andreas Schneider's CMake Java Support.  We have our own local copy merely
-to allow us to build the Java bindings with older versions of cmake (<2.8.6). Local modifications
-are commented with "Apache Qpid Proton...".
-If cmake 2.8.6 is in use, these files will not be used.
+These are Andreas Schneider's CMake Java Support.  We have our own local copy as all versions of
+CMake < 2.8.9 have defects in their Java support that affect us.  Local modifications are commented
+with "Apache Qpid Proton...".
 
 UseProtonJava:
 
