PROTON-194: fixed typo in README
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1441068 13f79535-47bb-0310-9956-ffa450edef68

--- a/README
+++ b/README
@@ -25,7 +25,7 @@ Please see http://qpid.apache.org/proton for a more info.
 
 ==== Build Instructions ====
 
-Proton has two separate build systems reflecting the nature of the its
+Proton has two separate build systems reflecting the nature of its
 two implementations.
 
    + Proton-C and the language bindings use CMake.
