PROTON-228: Provides the qpid::proton::Data class for Perl.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1466891 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/perl/ChangeLog
+++ b/proton-c/bindings/perl/ChangeLog
@@ -1,3 +1,6 @@
+version 0.5:
+	* Added the qpid::proton::Data type.
+
 version 0.4:
 	* Unit tests for qpid::proton::Message.
 	* Unit tests for qpid::proton::Messenger.
