--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -1,3 +1,6 @@
+version 0.4:
+	* No language-specific features developed in this release.
+
 version 0.3:
 	* No language-specific features developed in this release.
 	* Dropped the Rakefile in favor of packaging with a gemspec.
