--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -1,3 +1,6 @@
+version 0.5:
+	* Duck typed the Array class to work with Qpid::Proton::Data.
+
 version 0.4:
 	* No language-specific features developed in this release.
 
