PROTON-322: Extend the Ruby Hash class to work with the Data class.
Adds the proton_data_put and proton_data_get methods to the Hash class
for Ruby. When passed an instance of Qpid::Proton::Data it marshals the
contents of the Hash, encoding the values properly.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1490429 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -1,5 +1,6 @@
 version 0.5:
 	* Duck typed the Array class to work with Qpid::Proton::Data.
+	* Duck typed the Hash class to work with Qpid::Proton::Data.
 
 version 0.4:
 	* No language-specific features developed in this release.
