PROTON-324: Refactor Perl support for working with arrays and Data objects
Renamed the TypeHelper class to Mapping to be more like the Ruby
language. Deleted the previous qpid::proton::Array class since it
tightly coupled the developer's code to Proton where it should not do
so.

Provides three new methods:

  qpid::proton::put_array_into - put an array into a Data object

  qpid::proton::get_array_from - gets an array out of a Data object

  qpid::proton::get_list_from  - gets a list out of a Data object

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1491441 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/perl/ChangeLog
+++ b/proton-c/bindings/perl/ChangeLog
@@ -1,5 +1,8 @@
 version 0.5:
 	* Added the qpid::proton::Data type.
+	* Added the qpid::proton::put_array_into method.
+	* Added the qpid::proton::get_array_from method.
+	* Added the qpid::proton::put_list_into method.
 
 version 0.4:
 	* Unit tests for qpid::proton::Message.
