QPID-355: Fixed the broken Rspec tests.
Removed a few tracker spec tests since the expectation has changed. Also
removed the negative receive limit since that's no longer an exceptional
case.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1503701 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -1,6 +1,10 @@
 version 0.5:
 	* Duck typed the Array class to work with Qpid::Proton::Data.
 	* Duck typed the Hash class to work with Qpid::Proton::Data.
+	* Fixed broken Rspec tests due to changes in under Proton C.
+	  - Messenger.receive can accept a negative maximum
+	  - When testing bad subscribe attempts, tests now use a random string.
+	* Fixed encoding decimal128 values.
 
 version 0.4:
 	* No language-specific features developed in this release.
