PROTON-369: Add properties field to Qpid:Proton::Message
Provides Rspec tests as well as updates the send and recv examples to
use properties.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1508619 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -5,6 +5,7 @@ version 0.5:
 	  - Messenger.receive can accept a negative maximum
 	  - When testing bad subscribe attempts, tests now use a random string.
 	* Fixed encoding decimal128 values.
+	* Added properties field to Qpid::Proton::Message.
 
 version 0.4:
 	* No language-specific features developed in this release.
