--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -6,6 +6,8 @@ version 0.5:
 	  - When testing bad subscribe attempts, tests now use a random string.
 	* Fixed encoding decimal128 values.
 	* Added properties field to Qpid::Proton::Message.
+	* Hashes are now automatically encoded into Data objects.
+	* Fixed encoding Time objects.
 
 version 0.4:
 	* No language-specific features developed in this release.
