PROTON-379: Added annotations property to Ruby Message class.
Added Rspec tests to verify. Also updated the send.rb and recv.rb
examples to use annotations.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1509030 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -9,6 +9,7 @@ version 0.5:
 	* Hashes are now automatically encoded into Data objects.
 	* Fixed encoding Time objects.
 	* Added instructions field to Qpid::Proton::Message.
+	* Added annotations field to Qpid::Proton::Message.
 	* Fixed encoding Symbol objects.
 
 version 0.4:
