PROTON-380: Added the body property to Ruby Message class.
Includes Rspec tests and changes to the send.rb and recv.rb examples.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1509262 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -11,6 +11,7 @@ version 0.5:
 	* Added instructions field to Qpid::Proton::Message.
 	* Added annotations field to Qpid::Proton::Message.
 	* Fixed encoding Symbol objects.
+	* Added body field to Qpid::Proton::Message.
 
 version 0.4:
 	* No language-specific features developed in this release.
