--- a/proton-c/bindings/perl/ChangeLog
+++ b/proton-c/bindings/perl/ChangeLog
@@ -1,3 +1,7 @@
+version 0.6:
+	* qpid::proton::Messenger returns incoming trackers on get.
+	* qpid::proton::Messenger returns outgoing tracker on put.
+
 version 0.5:
 	* Added the qpid::proton::Data type.
 	* Added the qpid::proton::put_array_into method.
