--- a/proton-c/bindings/perl/ChangeLog
+++ b/proton-c/bindings/perl/ChangeLog
@@ -1,6 +1,7 @@
 version 0.6:
 	* qpid::proton::Messenger returns incoming trackers on get.
 	* qpid::proton::Messenger returns outgoing tracker on put.
+	* qpid::proton::Message exposes the body property.
 
 version 0.5:
 	* Added the qpid::proton::Data type.
