PROTON-427: Removed the flag argument from Messenger.settle
Made the API more consistent with the accept and reject methods.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1525959 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -1,3 +1,6 @@
+Version 0.6:
+	* PROTON-427: Removed the flag argument from Messenger.settle.
+
 version 0.5:
 	* Duck typed the Array class to work with Qpid::Proton::Data.
 	* Duck typed the Hash class to work with Qpid::Proton::Data.
