PROTON-342: Added a note to README about using DESTDIR.
Also includes a link to explain how its meant to be used.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1528112 13f79535-47bb-0310-9956-ffa450edef68

--- a/README
+++ b/README
@@ -91,6 +91,14 @@ would normally install to /usr/lib/perl5/vendor_perl/ then, if you use:
 
 the bindings would install to /opt/usr/lib/perl5/vendor_perl/ instead.
 
+NOTE: The use of DESTDIR does not affect the contents of libqpid-proton.pc. The
+contents of that file are based on the values provided when the CMake environment
+was created.
+
+For more on the use of DESTDIR, see the following:
+
+http://www.gnu.org/prep/standards/html_node/DESTDIR.html
+
 == Disable Building The Language Bindings ==
 
 To disable any language bindings, you can disable them individually with:
