--- a/README
+++ b/README
@@ -91,9 +91,9 @@ would normally install to /usr/lib/perl5/vendor_perl/ then, if you use:
 
 the bindings would install to /opt/usr/lib/perl5/vendor_perl/ instead.
 
-NOTE: The use of DESTDIR does not affect the contents of libqpid-proton.pc. The
-contents of that file are based on the values provided when the CMake environment
-was created.
+NOTE: The paths in libqpid-proton.pc are not updated if, when installing, DESTDIR
+is used. The contents of that file are based on the values provided when the
+CMake environment was created.
 
 For more on the use of DESTDIR, see the following:
 
