added perl-devel to binding dependencies
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1528822 13f79535-47bb-0310-9956-ffa450edef68

--- a/README
+++ b/README
@@ -49,7 +49,8 @@ language:
   yum install openssl-devel
 
   # dependencies needed for bindings
-  yum install swig python-devel ruby-devel php-devel java-1.6.0-openjdk
+  yum install swig python-devel ruby-devel php-devel perl-devel \
+              java-1.6.0-openjdk
 
   # dependencies needed for python docs
   yum install epydoc
