PROTON-448: Added missed ChangeLog entry
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1539431 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -1,5 +1,7 @@
 Version 0.6:
 	* PROTON-427: Removed the flag argument from Messenger.settle.
+	* PROTON-448: Ruby bindings need to have their set calls updated to
+                      properly map values to pn_data_t*
 
 version 0.5:
 	* Duck typed the Array class to work with Qpid::Proton::Data.
