PROTON-452: Expose the Messenger interrupt method in Ruby.
Exposed the method in Qpid::Proton::Messenger. Also provided the
Qpid::Proton::Error::InterruptedError type that is thrown when
necessary.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1543112 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -1,3 +1,6 @@
+Version 0.7:
+	* PROTON-452: Exposed Messenger interrupt method.
+
 Version 0.6:
 	* PROTON-427: Removed the flag argument from Messenger.settle.
 
