PROTON-457: Exposed the interrupt method of Messenger in Perl.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1543481 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/perl/ChangeLog
+++ b/proton-c/bindings/perl/ChangeLog
@@ -1,3 +1,6 @@
+version 0.7:
+	* PROTON-457: Add interrupt method to Messenger.
+
 version 0.6:
 	* qpid::proton::Messenger returns incoming trackers on get.
 	* qpid::proton::Messenger returns outgoing tracker on put.
