PROTON-454: Added the route method to Ruby's Messenger class.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1543550 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/ChangeLog
+++ b/proton-c/bindings/ruby/ChangeLog
@@ -1,5 +1,6 @@
 Version 0.7:
 	* PROTON-452: Exposed Messenger interrupt method.
+	* PROTON-454: Add route method to Messenger.
 
 Version 0.6:
 	* PROTON-427: Removed the flag argument from Messenger.settle.
