--- a/proton-c/bindings/perl/ChangeLog
+++ b/proton-c/bindings/perl/ChangeLog
@@ -1,5 +1,6 @@
 version 0.7:
 	* PROTON-457: Add interrupt method to Messenger.
+	* PROTON-463: Add qpid::proton::Tracker type.
 
 version 0.6:
 	* qpid::proton::Messenger returns incoming trackers on get.
