PROTON-458: Perl Messenger now dies on error conditions.
Added the qpid::proton::check_for_errors() method that takes the return
code of a method and dies if the value is an error.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1547155 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/perl/ChangeLog
+++ b/proton-c/bindings/perl/ChangeLog
@@ -1,6 +1,7 @@
 version 0.7:
 	* PROTON-457: Add interrupt method to Messenger.
 	* PROTON-463: Add qpid::proton::Tracker type.
+	* PROTON-458: Perl dies on error.
 
 version 0.6:
 	* qpid::proton::Messenger returns incoming trackers on get.
